# InfiniTAM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
Apps/InfiniTAM_bpo_cli/: CMakeLists.txt
Apps/SDFViz/: CMakeLists.txt  ExplicitInstantiations.cpp  HighlightVisualization.cpp  HighlightVisualization.h  SDFViz.cpp  SDFViz.h  SDFVizInteractorStyle.cpp  main.cpp
ITMLib/: Android.mk  CMakeLists.txt  GlobalTemplateDefines.h  ITMLibDefines.h
ITMLib/CameraTrackers/: CameraTrackerFactory.h  ITMCameraTrackerFactory.h
ITMLib/CameraTrackers/CPU/: ColorTracker_CPU.cpp  ColorTracker_CPU.h  DepthTracker_CPU.cpp  DepthTracker_CPU.h  ExtendedTracker_CPU.cpp  ExtendedTracker_CPU.h  ITMDynamicCameraTracker_CPU.cpp  ITMDynamicCameraTracker_CPU.h  SDF2SDFCameraTracker_CPU.cpp  SDF2SDFCameraTracker_CPU.h
ITMLib/CameraTrackers/CUDA/: ColorTracker_CUDA.cu  ColorTracker_CUDA.h  DepthTracker_CUDA.cu  DepthTracker_CUDA.h  DynamicCameraTracker_CUDA.cu  DynamicCameraTracker_CUDA.h  ExtendedTracker_CUDA.cu  ExtendedTracker_CUDA.h  ITMDynamicCameraTracker_CUDA.h
ITMLib/CameraTrackers/Interface/: CameraTracker.h  ColorTracker.cpp  ColorTracker.h  CompositeTracker.h  DepthTracker.cpp  DepthTracker.h  DynamicCameraTracker.cpp  DynamicCameraTracker.h  ExtendedTracker.cpp  ExtendedTracker.h  FileBasedTracker.cpp  FileBasedTracker.h  ForceFailTracker.cpp  ForceFailTracker.h  IMUTracker.cpp  IMUTracker.h  ITMCameraTracker.h  ITMColorTracker.h  ITMCompositeTracker.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMDynamicCameraTracker.h  ITMExtendedTracker.cpp  ITMForceFailTracker.h
ITMLib/CameraTrackers/Metal/: ExtendedTracker.metal  ExtendedTracker_Metal.h  ExtendedTracker_Metal.mm
ITMLib/CameraTrackers/Shared/: ColorTracker_Shared.h  DepthTracker_Shared.h  ExtendedTracker_Shared.h
ITMLib/Core/: ITMBasicEngine.tpp  ITMDenseDynamicMapper.tpp  ITMDenseDynamicMapper_PlainVoxelArray.cpp  ITMDenseMapper.h  ITMDenseMapper.tpp  ITMDynamicEngine.h  ITMDynamicEngine.tpp  ITMMainEngine.h  ITMMultiEngine.h  ITMTrackingController.h
ITMLib/Engines/Common/: AllocationTempData.h  CheckBlockVisibility.h  CommonFunctors.h  ITMCommonFunctors.h
ITMLib/Engines/DepthFusion/: DepthFusionEngine.h  DepthFusionEngineFactory.h  DepthFusionEngine_CPU.h  DepthFusionEngine_CPU_PlainVoxelArray.cpp  DepthFusionEngine_CPU_PlainVoxelArray.tpp  DepthFusionEngine_CPU_VoxelBlockHash.cpp  DepthFusionEngine_CPU_VoxelBlockHash.tpp  DepthFusionEngine_CUDA.h  DepthFusionEngine_CUDA_PlainVoxelArray.cu  DepthFusionEngine_CUDA_PlainVoxelArray.tcu  DepthFusionEngine_CUDA_PlainVoxelArray_Kernels.h  DepthFusionEngine_CUDA_VoxelBlockHash.cu  DepthFusionEngine_CUDA_VoxelBlockHash.tcu  DepthFusionEngine_CUDA_VoxelBlockHash_Kernels.h  DepthFusionEngine_Shared.h  DynamicSceneReconstructionEngine.h  DynamicSceneReconstructionEngineFactory.h  DynamicSceneReconstructionEngine_CPU.h  DynamicSceneReconstructionEngine_CPU_PlainVoxelArray.cpp  DynamicSceneReconstructionEngine_CPU_PlainVoxelArray.tpp  (+9 more)
ITMLib/Instantiations/: MetalInstantiations.mm
ITMLib/Objects/Meshing/: Mesh.h  (+1 more)
ITMLib/SurfaceTrackers/: SurfaceTrackerFactory.h
ITMLib/Utils/: CPPPrintHelpers.cpp  CUDAUtils.h  Configuration.cpp  Configuration.h  ITMHashBlockProperties.h  ITMPrintHelpers.cpp  ITMSceneParameters.cpp  ITMSceneParameters.h  ITMSurfelSceneParameters.cpp  ITMVoxelFlags.h  ImageTypes.h  JsonUtilities.cpp  JsonUtilities.h  MemoryBlockTypes.h  PixelUtils.h  ProjectionUtils.h  SurfelVolumeParameters.h  ValuePosition.h  VoxelVolumeParameters.cpp  VoxelVolumeParameters.h  json_utils.cpp
InfiniTAM/Tests/: AllTests.cpp  CMakeLists.txt  CUDAAtomicTesting.cu  Instantiations.cpp  SceneConstruction.cpp  TestITMIntArrayMap3D.cpp  TestImageMaskReader.cpp  TestUtils.cpp  TestUtils.h  TestUtils.tpp  TestUtilsForSnoopyFrames16And17.cpp  TestUtilsForSnoopyFrames16And17.h  TestVoxelVolumeConstruction.cpp  TestVoxelVolume_ConstructFromImage.cpp  TestVoxelVolume_SaveLoadCompact_CPU.cpp  TestVoxelVolume_SetCopyCompare.cpp  TestVoxelVolume_SetCopyCompare_CPU.cpp  Test_AtomicCAS_char.cu  Test_AtomicCAS_char.h  Test_Configuration.cpp  Test_ConstructVolumeFromImage_CPU.cpp  Test_ConstructVolumeFromImage_CPU_to_CUDA.cpp  Test_ConstructVolumeFromImage_CUDA.cpp  Test_ExpandAllocation.cpp  Test_FuseLifeIntoCanonical.cpp  Test_SceneSlicingPVA_CPU.cpp  Test_SetCopyCompare_CPU.cpp  Test_SetCopyCompare_CUDA.cpp  Test_SurfaceTrackingAuxiliaryFunctions.cpp  Test_VolumeSaveLoadCompact_CPU.cpp  Test_VolumeSaveLoadCompact_CUDA.cpp  Test_VoxelVolume_ConstructFromImage_CPU.cpp  Test_VoxelVolume_ConstructFromImage_CUDA.cpp  Test_VoxelVolume_SaveLoadCompact_CPU.cpp  Test_VoxelVolume_SaveLoadCompact_CUDA.cpp  Test_VoxelVolume_SetCopyCompare_CPU.cpp  Test_VoxelVolume_SetCopyCompare_CUDA.cpp  Test_WarpGradient.cpp  Test_WarpGradient_CPU.cpp  Test_WarpGradient_CPU_PVA.cpp  (+10 more)
Tests/: CMakeLists.txt  CUDAAtomicTesting.cu  CUDAAtomicTesting.h  TemporaryCUDA_Atomics.h  TestUtils.cpp  TestUtils.h  TestUtils.tpp  TestUtilsForSnoopyFrames16And17.cpp  TestUtilsForSnoopyFrames16And17.h  Test_CUDA_Atomics.cpp  Test_Configuration.cpp  Test_ConstructVolumeFromImage_CPU.cpp  Test_ConstructVolumeFromImage_CPU_to_CUDA.cpp  Test_ConstructVolumeFromImage_CUDA.cpp  Test_ExpandAllocation.cpp  Test_FuseLifeIntoCanonical.cpp  Test_GeometryUtilities.cpp  Test_ImageMaskReader.cpp  Test_IntArrayMap3D.cpp  Test_SceneSlicingPVA_CPU.cpp  Test_Serialization.cpp  Test_SetCopyCompare_CPU.cpp  Test_SetCopyCompare_CUDA.cpp  Test_SmoothWarpGradient.cpp  Test_SmoothWarpGradient_CPU_CUDA.cpp  Test_SurfaceTrackingAuxiliaryFunctions.cpp  Test_VolumeSaveLoadCompact_CPU.cpp  Test_VolumeSaveLoadCompact_CUDA.cpp  Test_WarpGradient_CPU_PVA.cpp  Test_WarpGradient_CPU_VBH.cpp  Test_WarpGradient_CUDA_PVA.cpp  Test_WarpGradient_CUDA_VBH.cpp  Test_WarpGradient_Common.h  Test_WarpGradient_PVA_to_VBH.cpp  Test_WarpScene.cpp  WarpAdvancedTestingUtilities.cpp  WarpAdvancedTestingUtilities.h  WarpAdvancedTestingUtilities.tpp
Tests/TestData/: config1.json  default_config.json  default_config_cpu.json  default_config_cuda.json  snoopy_color_000000_masked.pnm
(+1350 files in other folders)
